...
        }
    }

    // Init semesters
    LaunchedEffect(Unit) {
        val list = if (isDemoMode) {
            listOf("2025-2026-2", "2025-2026-1", "2024-2025-2", "2024-2025-1")
        } else {
            val calendar = Calendar.getInstance()
            val year = calendar.get(Calendar.YEAR)
            val month = calendar.get(Calendar.MONTH)
            val startYear = if (month >= 7) year else year - 1
            buildList {
...
