...
        ) {
            // 可见图标文字
            Row(
                modifier = Modifier
                    .fillMaxSize()
                    .selectableGroup()
                    .testTag("main-navigation")
                    .then(if (!enabled) Modifier.clearAndSetSemantics {} else Modifier)
                    .pointerInput(tabsCount, tabWidth, enabled) {
                        if (!enabled) return@pointerInput
                        awaitEachGesture {
                            val down = awaitFirstDown(requireUnconsumed = false, pass = PointerEventPass.Initial)
                            down.consume()
...
